syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.common";
option java_outer_classname = "CommonProto";

package common;

enum ResultType {
    ResultOK               = 0;
	ResultErrCheckAuth     = 1;
	ResultErrRedis         = 2;
	ResultErrInner         = 3;
}

message MsgInfo {
    string send_uid = 1;
    string recv_uid = 2;
    uint64  msg_id   = 3;
    string msg_type = 4;
    string msg_body = 5;
    string attachment = 6;
}
