syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.auth";
option java_outer_classname = "AuthProto";

import "common/common.proto";

package data;

service DataService {
    rpc CheckAuth(CheckAuthReq) returns (CheckAuthResp);
    rpc SetSession(SetSessionReq) returns (SetSessionResp);
    rpc GetSession(GetSessionReq) returns (GetSessionResp);
    rpc SaveMsg(SaveMsgReq) returns (SaveMsgResp);
};  

message CheckAuthReq {
	string uid = 1;
	string token = 2;
}

message CheckAuthResp {
	string uid = 1;
    common.ResultType result = 2;	
}
message SetSessionReq {
	string uid = 1;
	string server_info = 2;
}

message SetSessionResp {
	string uid = 1;
    common.ResultType result = 2;	
}

message GetSessionReq {
	string uid = 1;
}

message GetSessionResp {
	string uid = 1;
	string server_info = 2;
}

message SaveMsgReq {
	common.MsgInfo msg_info = 1;
}

message SaveMsgResp {
	common.ResultType result = 1;
}
